--- a/grid_upgift.html
+++ b/grid_upgift.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <h1>Alvin jangvik</h1>
-		<div class="grid-container">
-        <div class="jag">Jag är Alvin Jangvik, är 17 år och bor i åby.</div>
-		<div class="jag2">Jag gillar att spela, titta på film, lyssna på musik och hänga med kompisar.</div>
-		</div>
+		<main>
+        <section><p>Jag är Alvin Jangvik, är 17 år och bor i åby.</p></section>
+		<section><p>Jag gillar att spela, titta på film, lyssna på musik och hänga med kompisar.</p></section>
+		</main>
         <h2>Teknik</h2>
         <div class="b">
             <p class="b"></p>
